--- a/formBot.css
+++ b/formBot.css
@@ -7,7 +7,7 @@ html {
    
     align-items: center;
     flex-direction: column;
-    background-image: url('./formBot/BG1.png');
+    background-image: url('./BG1.png');
     background-size: cover; /* Adjusts the size of the background image to cover the entire container */
     background-repeat: no-repeat; /* Prevents the background image from repeating */
     background-position: center center;
